--- a/src/flatwhite.css
+++ b/src/flatwhite.css
@@ -5,18 +5,7 @@ html[data-theme='light'] {
     --background-color-s: 36%;
     --background-color-l: 98%;
     --cl-text-color: 34,8%,35%;
-    --primary-color-h: 0;
-    --primary-color-s: 22%;
-    --primary-color-l: 48%;
     --cl-primary: 0,22%,48%;
-    --secondary-color-h: 300;
-    --secondary-color-s: 17%;
-    --secondary-color-l: 53%;
     --cl-secondary: 300,17%,53%;
-    --accent-color-h: 160;    
-    --accent-color-s: 19%;
-    --accent-color-l: 46%;
-    --primary-text-h: 34;
-    --primary-text-s: 8%;
-    --primary-text-l: 35%;
+    --cl-accent: 160,19%,46%;
 }
